--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
-import { SITE_TITLE } from '../config';
-import HeaderLink from './HeaderLink.astro';
+import { SITE_TITLE } from "../config";
+import HeaderLink from "./HeaderLink.astro";
 ---
 
 <header>
@@ -11,9 +11,12 @@ import HeaderLink from './HeaderLink.astro';
     <HeaderLink href="/">Home</HeaderLink>
     <HeaderLink href="/works">Works</HeaderLink>
     <HeaderLink href="/about">About</HeaderLink>
-    <HeaderLink href="https://www.instagram.com/art.forests/" target="_blank">Instagram</HeaderLink>
+    <HeaderLink href="https://www.instagram.com/art.forests/" target="_blank">
+      Instagram
+    </HeaderLink>
   </nav>
 </header>
+
 <style>
   header {
     display: flex;
