--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import '../styles/global.css';
-import Header from '../components/Header.astro'
-import { SITE_DESCRIPTION, SITE_TITLE } from '../config'
+import "../styles/global.css";
+import Header from "../components/Header.astro";
+import { SITE_DESCRIPTION, SITE_TITLE } from "../config";
 ---
 
 <html lang="en">
@@ -16,9 +16,11 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '../config'
 	<body>
 		<Header />
 		<main>
-		  <h1>Anastasija Dubovska</h1>
-		  <p>I'm a graphic artist from Latvia. Welcome to my imaginary world!</p>
-		  <img width="100%" height="100%" src="/hero.jpg" alt="hero" />
+			<h1>Anastasija Dubovska</h1>
+			<p>
+				I'm a graphic artist from Latvia. Welcome to my imaginary world!
+			</p>
+			<img width="100%" height="100%" src="/hero.jpg" alt="hero" />
 		</main>
 	</body>
 </html>
